examples/nextjs-spreadsheet-advanced/src/pages/index.module.css
.container {
  position: relative;
  display: flex;
  flex-direction: column;
  max-width: calc(100vw - 2 * var(--margin));
  max-height: calc(100vh - 2 * var(--margin));
  background: var(--gray-100);
  border-radius: calc(var(--radius) + var(--padding));
  overflow: hidden;
}

.banner {
  --banner-height: 32px;

  flex: none;
  display: flex;
  padding: var(--padding);
  border-bottom: var(--border) solid var(--gray-200);
}

.buttons {
  display: flex;
  flex: none;
  height: var(--banner-height);
  margin-right: var(--padding);
}

.button_group {
  display: flex;
}

.button_group:not(:last-child):after {
  content: "";
  display: block;
  align-self: center;
  width: var(--border);
  border-radius: var(--border);
  height: calc(var(--banner-height) - var(--padding) * 2);
  background: var(--gray-200);
  margin: 0 var(--padding);
}

.button {
  all: unset;
  display: flex;
  place-content: center;
  place-items: center;
  border-radius: var(--radius);
  color: var(--gray-500);
  cursor: pointer;
  padding: 0px 6px;
  font-size: 13px;
}

.button:disabled {
  color: var(--gray-300);
  cursor: default;
}

.button span {
  margin-left: 5px;
  margin-right: 2px;
}

.button:not(:disabled):hover,
.button:not(:disabled):focus {
  background: var(--gray-200);
}

.avatars {
  display: flex;
  flex-direction: row-reverse;
  place-items: center;
  flex: none;
  margin-left: auto;
}

.avatar:not(:last-child) {
  margin-left: calc(-0.2 * var(--row-height));
}

.avatar {
  width: calc(var(--banner-height) - var(--padding) / 2);
  height: calc(var(--banner-height) - var(--padding) / 2);
  background: var(--gray-100);
  box-shadow: 0 0 0 var(--border) var(--gray-100);
}

.avatar_ellipsis {
  display: flex;
  place-content: center;
  place-items: center;
  font-size: 11px;
  font-weight: 500;
  background: var(--gray-300);
  color: var(--gray-600);
  border-radius: 50%;
  z-index: 1;
}

.loading {
  width: 64px;
  height: 64px;
  opacity: 0.2;
}

